# dig-ai

./: .env.example  AGENTS.md  README.md  docker-compose.yml
backend/: .env.sample  .gitignore  DockerFile  README.md  pyproject.toml  refactoriig.md
backend/app/: __init__.py  container.py  errors.py  main.py
backend/app/agents/: __init__.py  client.py
backend/app/agents/appraisal_agent/: __init__.py  appraisal_agent.py  appraiser.py  appralsal_agent.py  base_info_extractor.py
backend/app/agents/item_text_normalizer_agent/: __init__.py  item_text_normalizer_agent.py
backend/app/agents/tools/: __init__.py  find_similar_items.py  list_categories.py
backend/app/api/: admin_item_router.py  appraisal_router.py  auth_router.py  depends.py
backend/app/auth/: auth_context_service.py  security.py
backend/app/infra/: __init__.py
backend/app/infra/db/: __init__.py  mysql_client.py  redis_client.py
backend/app/repositories/: brand_repository.py  category_repository.py  item_repository.py  user_repository.py
backend/app/schemas/: admin_item_schemas.py  appraisal_schemas.py  auth_schemas.py  internal_types.py
backend/app/services/: admin_item_service.py  appraisal_service.py  appraisal_state_manager.py  appraisal_state_store.py  auth_service.py
backend/migrations/: 202603241024_init_tables.sql  202604110001_seed_brands_categories.sql
backend/sql/: manual_create_admin_user.sql  seed_categories.sql  test_seed.sql
backend/tests/: conftest.py
backend/tests/agents/appraisal_agent/: test_appraisal_agent.py  test_appraiser.py  (+1 more)
backend/tests/repositories/: test_brand_repository.py  test_category_repository.py  test_item_repository.py
backend/tests/services/: test_admin_item_service.py
(+18 files in other folders)
